results/SVCOMP/4-shot/log-assert5-2024_03_18_06_28_53.txt
import java.util.Random;

class assert5 {
    //@ ensures i > 1000;
    public static void func() {
        int i = new Random().nextInt();

        if (i > 1000) assert i > 1000 : "i is greater 1000"; // should hold
    }
}
/home/max/Documents/JMLGPT/tmp/assert5.java:4: error: cannot find symbol
    //@ ensures i > 1000;
                ^
  symbol:   variable i
  location: class assert5
1 error

